--- a/styles.css
+++ b/styles.css
@@ -151,7 +151,7 @@ section.join h2{
 
 form input{
     font-size: 24px;
-    color: #f4f4f4;
+    color: #4b4b4b;
     margin: 14px;
     padding: 10px 20px;
     border: 1px solid #fff;
@@ -165,3 +165,29 @@ footer{
     text-align: center;
     padding: 10px;
 }
+
+/* Pseudo Classes => these are used to style elements when they are in different states */
+nav ul li a:hover{
+    text-decoration: underline;
+}
+
+.images li:hover{
+    position: relative;
+    top: -4px; /* Moves the element in the direction of top */
+}
+
+form input:focus{
+    border: 4px solid #4b4b4b;
+    outline: none;
+}
+
+form input:valid {
+    border: 4px solid #71d300;
+}
+
+/* We could style an element which is the first child of an element using
+** nav li:first-child {
+**      border: 5px solid #fff;
+**  }
+*/
+        
